Fixing white space below footer
Increased padding in the main section

--- a/about.css
+++ b/about.css
@@ -63,6 +63,7 @@ html, body {
 .footer {
 	height:50px;
 	background-color:black;
+	margin : 0px;
 
 }
 a {
@@ -77,7 +78,7 @@ a {
 }
 .footer li {
 	display:inline;
-	margin:20px;
+	margin:0 ;
 	text-decoration:none;
 	color:white;
 	font-family: courier;
@@ -92,7 +93,7 @@ a {
   .row {
     margin-top: 0;
     margin-left: 50%;
-    margin: 0 auto ;
+    margin: 0;
   }
   .img-responsive {
     margin-bottom: 20px;
