--- a/projects.css
+++ b/projects.css
@@ -49,6 +49,8 @@ html, body {
 .main {
 	margin:0px;
 	z-index: -2;
+	padding-bottom: 55px;
+	padding-top:100px;
 }
 
 .main img {
@@ -63,9 +65,11 @@ html, body {
 
 .footer {
 	height:50px;
-	background-color:black;
-
+	background-color:#191a1e;
+	margin:0;
+	padding:0;
 }
+
 a {
 	text-decoration:none;
 	color:white;
